--- a/Talaria/package.json
+++ b/Talaria/package.json
@@ -2,6 +2,7 @@
   "name": "talaria",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -28,10 +29,10 @@
     "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "firebase": "^12.3.0",
+    "firebase": "^11.2.0",
     "framer-motion": "^12.23.22",
     "lucide-react": "^0.263.1",
-    "next": "^15.0.0",
+    "next": "15.5.4",
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -42,12 +43,12 @@
     "zod": "^4.1.11"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "^15.0.0",
+    "eslint": "^9",
+    "eslint-config-next": "15.5.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
