--- a/Talaria/.eslintrc.json
+++ b/Talaria/.eslintrc.json
@@ -7,13 +7,14 @@
     "react-hooks/exhaustive-deps": "warn",
     "@next/next/no-html-link-for-pages": "warn",
     
-    // Errors that should always be caught
-    "no-unused-vars": "off",
-    "@typescript-eslint/no-unused-vars": ["error", { 
+    // Allow console.warn and console.error only
+    "no-console": ["warn", { "allow": ["warn", "error"] }],
+    
+    // Unused vars - using built-in rule instead of TypeScript ESLint
+    "no-unused-vars": ["error", { 
       "argsIgnorePattern": "^_",
       "varsIgnorePattern": "^_" 
-    }],
-    "no-console": ["warn", { "allow": ["warn", "error"] }]
+    }]
   }
 }
 
