--- a/Talaria/package.json
+++ b/Talaria/package.json
@@ -34,7 +34,7 @@
     "firebase": "^11.2.0",
     "framer-motion": "^12.23.22",
     "lucide-react": "^0.263.1",
-    "next": "15.5.4",
+    "next": "^15.5.4",
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
